Recipe text is different colour

--- a/src/components/Recipe.css
+++ b/src/components/Recipe.css
@@ -1,5 +1,6 @@
 .recipe {
     background-color: #ACF39D;
+    color: #3A1820;
     display: flex;
     flex-direction: column;
     border: #E85F5C;
